--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <div class="game-container">
         <!-- Start screen -->
         <div class="game-start-screen" id="start-screen">
-            <h1>Item Sorter Game</h1>
+            <h1>Let's go shopping!</h1>
             <p class="game-description">Drag the item to the correct shop. If you run out of time or drag it to the wrong place, you'll move to the next item.</p>
             <button id="play-btn">Start Game</button>
         </div>
@@ -793,4 +793,5 @@
     </script>
 </body>
 </html>
+
 
