--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         
         <!-- Main game view -->
         <div class="game-main" id="main-game-screen">
-            <h1 style="margin-bottom: 1rem;">Item Sorter Game</h1>
+            <h1 style="margin-bottom: 1rem;">Let's go shopping!</h1>
             
             <!-- New compact container for stats and item -->
             <div id="item-and-stats-container">
@@ -793,5 +793,6 @@
     </script>
 </body>
 </html>
+
 
 
